folder restructure, animations mixin bug squashing

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: calc(100vh - 40px);
   background: linear-gradient(180deg, $color-primary-dark-0 0%, $color-primary-dark-50 100%);
-	background-color: $color-primary;
+  background-color: $color-primary;
 
   // create geometric cut out at bottom
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
@@ -99,6 +99,9 @@
       z-index: -1;
       margin-top: auto;
       margin-left: auto;
+      position: relative;
+
+      @include slideLeft(-5rem, 2s);
 
       @include tablet() {
         height: 100%;
