--- a/src/scss/mixins/_mixins.scss
+++ b/src/scss/mixins/_mixins.scss
@@ -1,96 +1,2 @@
-// Animations
-@mixin slideLeft($value, $time) {
-  @keyframes slideLeft {
-    0% {
-      right: $value;
-    }
-    100% {
-      right: 0;
-    }
-  }
-  animation: slideLeft $time forwards;
-}
-
-@mixin slideRight($value, $time) {
-  @keyframes slideRight {
-    0% {
-      right: 0;
-    }
-    100% {
-      right: $value;
-    }
-  }
-  animation: slideRight $time forwards;
-}
-
-@mixin slideUp($value, $time) {
-  @keyframes slideUp {
-    0% {
-      bottom: $value;
-    }
-    100% {
-      bottom: 0;
-    }
-  }
-  animation: slideUp $time forwards;
-}
-
-@mixin slideDown($value, $time) {
-  @keyframes slideDown {
-    0% {
-      bottom: 0;
-    }
-    100% {
-      bottom: $value;
-    }
-  }
-  animation: slideDown $time forwards;
-}
-
-@mixin fadeIn($time) {
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  animation: fadeIn $time forwards;
-}
-
-@mixin fadeOut($time) {
-  @keyframes fadeOut {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
-  }
-  animation: fadeOut $time forwards;
-}
-
-@mixin wipeTopLeft($time) {
-  @keyframes wipeTopLeft {
-    0% {
-      clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-    }
-    100% {
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    }
-  }
-  animation: wipeTopLeft $time forwards;
-}
-
-@mixin wipeTopRight($time) {
-  @keyframes wipeTopRight {
-    0% {
-      clip-path: polygon(100% 0, 100% 0, 100% 0, 100% 0);
-    }
-    100% {
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    }
-  }
-  animation: wipeTopRight $time forwards;
-}
+@import "./animations";
+@import "./media-queries";
